log
Wed, May 14, 2025  8:20:11 AM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:13: error: implicit declaration of function 'addNode' [-Werror=implicit-function-declaration]
             addNode(list, new_node);
             ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Wed, May 14, 2025  8:20:28 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
023ae84
Wed, May 14, 2025  8:22:41 AM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
7a4a428
Wed, May 14, 2025  8:33:47 AM: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a0ae6d1
Wed, May 14, 2025  8:40:58 AM: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
Compilation failed
test.c: In function 'is_valid':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
261f4fc
Wed, May 14, 2025  8:41:32 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
843355f
Wed, May 14, 2025  8:44:39 AM: 
 sudoku.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:70:13: error: unused variable 'arreglo' [-Werror=unused-variable]
         int arreglo[10] = {};
             ^~~~~~~
cc1.exe: all warnings being treated as errors
5f8cf16
Wed, May 14, 2025  8:44:54 AM: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
2201c6d
